BugWordWrap

--- a/Ressources/CustomCss/Custom.css
+++ b/Ressources/CustomCss/Custom.css
@@ -41,3 +41,7 @@ padding: 7px 10px 7px 10px;
 .alignRight {
 float:right;
 }
+
+#detail_nom {
+word-wrap: break-word;
+}
